sw/qa/extras/uiwriter/uiwriter2.cxx
@@ -41,6 +41,7 @@
 #include <fmtornt.hxx>
 #include <xmloff/odffields.hxx>
 #include <com/sun/star/frame/DispatchHelper.hpp>
+#include <txtfrm.hxx>
 
 namespace
 {
@@ -79,6 +80,7 @@ public:
     void testMixedFormFieldInsertion();
     void testImageComment();
     void testImageCommentAtChar();
+    void testTdf124261();
 
     CPPUNIT_TEST_SUITE(SwUiWriterTest2);
     CPPUNIT_TEST(testRedlineMoveInsertInDelete);
@@ -108,6 +110,7 @@ public:
     CPPUNIT_TEST(testMixedFormFieldInsertion);
     CPPUNIT_TEST(testImageComment);
     CPPUNIT_TEST(testImageCommentAtChar);
+    CPPUNIT_TEST(testTdf124261);
     CPPUNIT_TEST_SUITE_END();
 
 private:
@@ -1166,6 +1169,40 @@ void SwUiWriterTest2::testImageCommentAtChar()
                          getProperty<OUString>(getRun(xPara, 4), "TextPortionType"));
     CPPUNIT_ASSERT_EQUAL(OUString("Text"),
                          getProperty<OUString>(getRun(xPara, 5), "TextPortionType"));
+}
+
+void SwUiWriterTest2::testTdf124261()
+{
+#if !defined(WNT)
+    // Make sure that pressing a key in a btlr cell frame causes an immediate, correct repaint.
+    SwDoc* pDoc = createDoc("tdf124261.docx");
+    SwRootFrame* pLayout = pDoc->getIDocumentLayoutAccess().GetCurrentLayout();
+    SwFrame* pPageFrame = pLayout->GetLower();
+    CPPUNIT_ASSERT(pPageFrame->IsPageFrame());
+
+    SwFrame* pBodyFrame = pPageFrame->GetLower();
+    CPPUNIT_ASSERT(pBodyFrame->IsBodyFrame());
+
+    SwFrame* pTabFrame = pBodyFrame->GetLower();
+    CPPUNIT_ASSERT(pTabFrame->IsTabFrame());
+
+    SwFrame* pRowFrame = pTabFrame->GetLower();
+    CPPUNIT_ASSERT(pRowFrame->IsRowFrame());
+
+    SwFrame* pCellFrame = pRowFrame->GetLower();
+    CPPUNIT_ASSERT(pCellFrame->IsCellFrame());
+
+    SwFrame* pFrame = pCellFrame->GetLower();
+    CPPUNIT_ASSERT(pFrame->IsTextFrame());
+
+    // Make sure that the text frame's area and the paint rectangle match.
+    // Without the accompanying fix in place, this test would have failed with 'Expected: 1721;
+    // Actual: 1547', i.e. an area other than the text frame was invalidated for a single-line
+    // paragraph.
+    SwTextFrame* pTextFrame = static_cast<SwTextFrame*>(pFrame);
+    SwRect aRect = pTextFrame->GetPaintSwRect();
+    CPPUNIT_ASSERT_EQUAL(pTextFrame->getFrameArea().Top(), aRect.Top());
+#endif
 }
 
 CPPUNIT_TEST_SUITE_REGISTRATION(SwUiWriterTest2);
